--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -362,16 +362,15 @@ article {
 
 	h1 {
 		font-size: 87px;
-		text-align: center;
+    text-align: center;
+    
+    small {
+      font-size: 24px;
+      line-height: 36px;
+      text-align: center;
+      margin: 0 0 30px 0;
+    }
 	}
-	
-	h2 {
-		font-size: 24px;
-		line-height: 36px;
-		text-align: center;
-		margin: 0 0 30px 0;
-	}
-	
 }
 
 .quote-left {
