--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -239,18 +239,6 @@ article {
 	}
 }
 
-.call-wrap {
-	clear: both;
-	float: left;
-	width: 390px;
-	height: 125px;
-
-	.absolute {
-		width: 519px;
-		height: 125px;
-	}
-}
-
 .call {
 	background: url(../images/bg-call.png) no-repeat;
 	position: relative;
@@ -267,13 +255,11 @@ article {
 	width: 390px;
 	height: 125px;
 	display: block;
-	float: right;
 }
 
 .quotes {
 	width: 322px;
 	height: 125px;
-	float: right;
 	overflow: hidden;
 	background: url(../images/bg-quotes.png) no-repeat;
 	padding-left: 68px;
@@ -317,13 +303,11 @@ article {
 }
 
 .quote-left {
-	float: left;
 	width: 630px;
 	margin: 0 20px 0 0;
 }
 
 .quote-right {
-	float: left;
 	width: 310px;
 	overflow: hidden;
 	margin: 0 0 30px 0;
@@ -350,18 +334,20 @@ article {
 		outline: none;
 	}
 
-	.state input {
-		width: 128px;
-		margin: 0 10px 10px 0;
-		float: left;
-		color: #ccc;
-		clear: both;
+	.state {
+		input {
+      width: 128px;
+      margin: 0 10px 10px 0;
+      color: #ccc;
+      clear: both;
+    }
 	}
 	
-	.zip input {
-		width: 128px;
-		float: left;
-		clear: none;
+	.zip {
+		input {
+      width: 128px;
+		  clear: none;
+    }
 	}
 	
 	input[type="submit"] {
@@ -403,55 +389,6 @@ article {
     color:#7c2500;
 }
 
-.left,
-.right {
-	float: left;
-}
-
-.user-content {
-	ul,
-	ol {
-		margin: 0 0 10px 20px;
-	}
-
-	ul {
-		list-style: disc;
-	}
-
-	ol {
-		list-style: decimal;
-	}
-}
-
-.wrap {
-	overflow: hidden;
-}
-
-.navigation {
-	clear :both;
-}
-
-.prev, 
-.next {
-	text-transform: uppercase;
-	font-weight: bold;
-	width: auto;
-	text-align: center;
-
-	a {
-		padding:10px;
-	}
-}
-
-//General
-.end {
-	margin: 0px;
-}
-
-.clear {
-	clear: both;
-}
-
 .absolute {
 	position: absolute;
 }
@@ -463,7 +400,6 @@ article {
 	margin: 60px 0 0 0;
 	border-radius: 10px 10px 0px 0px;
 	text-align: center;
-	float: left;
 	clear: both;
 }
 
