--- a/wp-content/themes/lrc/src/css/_vars.scss
+++ b/wp-content/themes/lrc/src/css/_vars.scss
@@ -1,3 +1,8 @@
+//Breakpoints
+$full-hd: 1920px;
+$desktop: 1200px;
+$tablet: 768px;
+
 :root {
   //Fonts
   --main: 'Agenda-Medium', verdana, sans-serif;
@@ -5,4 +10,6 @@
 
   //Spacing
   --max-width: 960px;
+  --space: 16px;
+  --half-space: calc(var(--space) / 2);
 }
