--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -4,7 +4,7 @@
 
 @keyframes clouds {
 	from {
-		background-position:0px 0px;
+		background-position: 0px 0px;
 	}
 
 	to {
@@ -27,7 +27,7 @@ a:visited {
 }
 
 p {
-	margin-bottom: 10px;
+	margin-bottom: var(--space-1);
 
 	&.more {
 		font-weight: bold;
@@ -45,7 +45,7 @@ h6 {
 	text-transform: uppercase;
 	clear: both;
 	font-weight: normal;
-	color: #FFF;
+	color: var(--white);
 }
 
 h1 {
@@ -91,7 +91,7 @@ h4 {
 
 header.main {
 	margin-top: 24px;
-	margin-bottom: 60px;
+	margin-bottom: var(--space-4);
 
 	.wrapper {
 		align-items: center;
@@ -109,7 +109,7 @@ header.main {
 		}
 		
 		a {
-			color: #FFF;
+			color: var(--white);
 		}
 	}
 }
@@ -117,21 +117,21 @@ header.main {
 .top {
 	width: 100%;
 	min-height: 550px;
-	text-shadow: 1px 1px 0px #157cd0;
+	text-shadow: 1px 1px 0px var(--shadow-color);
 	overflow: auto;
 	text-align: center;
 
 	&:before {
-		content: '';
-		background: url(../images/bg-clouds2.png) repeat-x;
+    content: '';
+    display: block;
 		width: 100%;
-		height: 550px;
-		z-index: -1;
-		position: absolute;
-		display: block;
+    height: 550px;
+    background: url(../images/bg-clouds2.png) repeat-x;
+    animation: clouds linear infinite 1000s;
+    position: absolute;
 		top: 0;
-		left: 0;
-		animation: clouds linear infinite 1000s;
+    left: 0;
+    z-index: -1;
 	}
 
 	.wrapper {
@@ -139,14 +139,14 @@ header.main {
 	}
 
 	header {
-		margin: 22px auto 0 auto;
+		margin: var(--space-1-half) auto 0 auto;
 		text-align: center;
 	}
 	
 	h1 {
 		font-size: 97px;
 		line-height: 70px;
-		margin: 0 0 25px 0;
+		margin: 0 0 var(--space-1-half) 0;
 
 		small {
 			font-size: 52px;
@@ -156,11 +156,11 @@ header.main {
 	
 	p {
 		font-size: 18px;
-		margin: 0 0 30px 0;
+		margin: 0 0 var(--space-2) 0;
 	}
 	
 	.btn {
-		border: 1px solid #FFF;
+		border: 1px solid var(--white);
 		padding: 10px;
 		background: #e6700e;
 		background: #f3ae36;
@@ -168,7 +168,7 @@ header.main {
 		background: -webkit-linear-gradient(top,  #f3ae36 0%,#d84202 100%);
 		background: linear-gradient(to bottom,  #f3ae36 0%,#d84202 100%);
 		text-shadow: 1px 1px 0px #000;
-		color: #FFF;
+		color: var(--white);
 	}
 }
 
@@ -188,12 +188,12 @@ header.main {
 	background: #398234 url(../images/bg-about.jpg) repeat-x;
 	text-shadow: 1px 1px 0px #285c25;
 	overflow: auto;
-	padding: 20px 0 125px;
+	padding: var(--space-1-half) 0 125px;
 	
 	h1 {
 		font-size: 78px;
 		line-height: 60px;
-		margin: 0 0 25px 0;
+		margin: 0 0 var(--space-1-half) 0;
 		text-align: center;
 
 		small {
@@ -206,7 +206,7 @@ header.main {
 
 .about-left {
 	width: 250px;
-	margin: 0 50px 0 0;
+	margin: 0 var(--space-3) 0 0;
 	overflow: hidden;
 	flex: 1;
 	display: flex;
@@ -223,13 +223,13 @@ header.main {
 	text-shadow: 1px 1px 0px #285c25;
 	border-bottom: 1px solid #000;
 	background: #45913f url(../images/bg-services.jpg) repeat-x;
-	padding-bottom: 75px;
+	padding-bottom: var(--space-5);
 	
 	.wrapper {
 		flex-direction: column;
 
 		> article {
-			margin-bottom: 75px;
+			margin-bottom: var(--space-5);
 		}
 	}
 
@@ -279,16 +279,16 @@ header.main {
 	width: 322px;
 	height: 125px;
 	overflow: hidden;
-	padding-left: 68px;
+	padding-left: var(--sapce-4);
 
 	div {
-		margin-left: 68px;
+		margin-left: var(--space-4);
 	}
 }
 
 .quote-name {
 	font-family: var(--headline);
-	margin: 0px;
+	margin: 0;
 	text-align: right;
 }
 
@@ -298,11 +298,11 @@ header.main {
 	overflow: auto;
 	background: #794800 url(../images/bg-bottom.jpg) repeat-x;
 	text-shadow: 1px 1px 0px #2b1400;
-	padding: 75px 0 0;
+	padding: var(--space-5) 0 0;
 	
 	article {
 		p {
-			margin:0 0 20px 0;
+			margin:0 0 calc(var(--space-1) + var(--space-half)) 0;
 		}
 	}
 
@@ -315,20 +315,20 @@ header.main {
       font-size: 24px;
       line-height: 36px;
       text-align: center;
-      margin: 0 0 30px 0;
+      margin: 0 0 var(--space-2) 0;
     }
 	}
 }
 
 .quote-left {
 	width: 630px;
-	margin: 0 20px 0 0;
+	margin: 0 var(--space-1-half) 0 0;
 }
 
 .quote-right {
 	width: 310px;
 	overflow: hidden;
-	margin: 0 0 30px 0;
+	margin: 0 0 var(--sapce-2) 0;
 
 	label {
 		display: none;
@@ -338,7 +338,7 @@ header.main {
 	textarea {
 		border-radius: 20px;
 		border: 1px solid #7c2500;
-		margin: 0 0 10px 0;
+		margin: 0 0 var(--sapce-1);
 		font-family: arial;
 		font-size: 18px;
 		color: #fff;
@@ -355,7 +355,7 @@ header.main {
 	.state {
 		input {
       width: 128px;
-      margin: 0 10px 10px 0;
+      margin: 0 var(--sapce-1) var(--sapce-1) 0;
       color: #ccc;
       clear: both;
     }
@@ -376,8 +376,9 @@ header.main {
 		box-shadow: none;
 		text-shadow: 1px 1px 0px #f5d19a;
 		color: #d63900;
-		text-transform: capitalize;
-		min-width: 310px;
+    text-transform: capitalize;
+    width: 100%;
+		max-width: 310px;
 		display: block;
 	}
 
@@ -391,7 +392,7 @@ header.main {
 
 #frm_field_cptch_number_container {
 	input {
-		margin-bottom: 10px !important;
+		margin-bottom: var(--space-1) !important;
 	}
 }
 
@@ -429,10 +430,6 @@ header.main {
 		display: inline-block;
   	margin-left: 10px;
 	}
-}
-
-.mobile-only {
-	display: none;
 }
 
 //One Page Love Award
