Update color variables

--- a/wp-content/themes/lrc/src/css/_vars.scss
+++ b/wp-content/themes/lrc/src/css/_vars.scss
@@ -12,6 +12,7 @@ $tablet: 768px;
   --white: #FFF;
   --black: #000;
   --shadow-color: rgba(0,0,0,0.4);
+  --dark-green: #398234;
 
   //Spacing
   --max-width: 960px;
