Added smoothscroll js + fixed variable typos

--- a/wp-content/themes/lrc/src/css/_vars.scss
+++ b/wp-content/themes/lrc/src/css/_vars.scss
@@ -19,7 +19,7 @@ $tablet: 768px;
   --space: 16px;
   --space-half: calc(var(--space) / 2);
   --space-1: var(--space);
-  --space-1-half: calc(var(--sapce-1) + var(--space-1-half));
+  --space-1-half: calc(var(--space-1) + var(--space-1-half));
   --space-2: calc(var(--space) * 2);
   --space-3: calc(var(--space) * 3);
   --space-4: calc(var(--space) * 4);
