--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -15,9 +15,10 @@
 body {
 	background: #45913f url(../images/bg-top.jpg) no-repeat center top;
 	color: var(--white);
-	font-size: 14px;
+	font-size: 16px;
 	font-family: var(--main);
-	line-height: 1.5;
+	text-shadow: 1px 1px 0px var(--shadow-color);
+	line-height: 1.3;
 }
 
 a,
@@ -49,7 +50,9 @@ h6 {
 }
 
 h1 {
+	line-height: 1;
 	font-size: 24px;
+	margin-bottom: var(--space-2);
 
 	small {
 		display: block;
@@ -117,7 +120,6 @@ header.main {
 .top {
 	width: 100%;
 	min-height: 550px;
-	text-shadow: 1px 1px 0px var(--shadow-color);
 	overflow: auto;
 	text-align: center;
 
@@ -146,7 +148,6 @@ header.main {
 	h1 {
 		font-size: 97px;
 		line-height: 70px;
-		margin: 0 0 var(--space-1-half) 0;
 
 		small {
 			font-size: 52px;
@@ -167,7 +168,6 @@ header.main {
 		background: -moz-linear-gradient(top,  #f3ae36 0%, #d84202 100%);
 		background: -webkit-linear-gradient(top,  #f3ae36 0%,#d84202 100%);
 		background: linear-gradient(to bottom,  #f3ae36 0%,#d84202 100%);
-		text-shadow: 1px 1px 0px #000;
 		color: var(--white);
 	}
 }
@@ -183,17 +183,23 @@ header.main {
 	width: 310px;
 }
 
+.bottom-grass {
+	width: 100%;
+	background: #46913f;
+	background: -moz-linear-gradient(top, rgba(70,145,63,1) 0%, rgba(44,112,39,1) 50%, rgba(70,145,63,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(70,145,63,1) 0%,rgba(44,112,39,1) 50%,rgba(70,145,63,1) 100%);
+	background: linear-gradient(to bottom, rgba(70,145,63,1) 0%,rgba(44,112,39,1) 50%,rgba(70,145,63,1) 100%);
+	border-bottom: 1px solid var(--black);
+}
+
 .about {
 	width: 100%;
-	background: #398234 url(../images/bg-about.jpg) repeat-x;
-	text-shadow: 1px 1px 0px var(--shadow-color);
+	margin-bottom: var(--space-5);
 	overflow: auto;
-	padding: var(--space-1-half) 0 125px;
 	
 	h1 {
 		font-size: 78px;
 		line-height: 60px;
-		margin: 0 0 var(--space-1-half) 0;
 		text-align: center;
 
 		small {
@@ -220,10 +226,7 @@ header.main {
 .services {
 	width: 100%;
 	overflow: auto;
-	text-shadow: 1px 1px 0px var(--shadow-color);
-	border-bottom: 1px solid var(--black);
-	background: #45913f url(../images/bg-services.jpg) repeat-x;
-	padding-bottom: var(--space-5);
+	margin-bottom: var(--space-5);
 	
 	.wrapper {
 		flex-direction: column;
@@ -295,10 +298,22 @@ header.main {
 .bottom {
 	width: 100%;
 	border-top: 1px solid #b67c27;
-	overflow: auto;
-	background: #794800 url(../images/bg-bottom.jpg) repeat-x;
-	text-shadow: 1px 1px 0px #2b1400;
-	padding: var(--space-5) 0 0;
+	background: rgb(71,23,0);
+	background: -moz-linear-gradient(top,  rgba(71,23,0,1) 0%, rgba(121,72,0,1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(71,23,0,1) 0%,rgba(121,72,0,1) 100%);
+	background: linear-gradient(to bottom,  rgba(71,23,0,1) 0%,rgba(121,72,0,1) 100%);
+	overflow: hidden;
+	position: relative;
+
+	// &:before {
+	// 	content: '';
+	// 	width: 100%;
+	// 	height: 50px;
+	// 	position: absolute;
+	// 	top: 0;
+	// 	left: 0;
+	// 	box-shadow: inset 0px 20px 20px rgba(0,0,0,0.50);
+	// }
 	
 	article {
 		p {
@@ -318,6 +333,13 @@ header.main {
       margin: 0 0 var(--space-2) 0;
     }
 	}
+}
+
+.dirt {
+	box-shadow: inset 0px 15px 30px rgba(0,0,0,0.50);
+	width: 120%;
+	padding: var(--space-5) 0 0;
+	margin-left: -10%;
 }
 
 .quote-left {
@@ -343,7 +365,6 @@ header.main {
 		font-size: 18px;
 		color: #fff;
 		box-shadow: inset 0px 0px 32px rgba(0,0,0,0.5);
-		text-shadow: 1px 1px 0px #000;
 		background: #4b2700;
 		display: block;
 		padding: 10px;
@@ -385,7 +406,6 @@ header.main {
 	span {
 		color: #CCC;
 		font-size: 12px;
-		text-shadow: 1px 1px solid #000;
 		clear: both;
 	}
 }
