Added higher res background image + removed old images

--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -20,7 +20,8 @@
 }
 
 body {
-	background: #45913f url(../images/bg-top.jpg) no-repeat center top;
+	background: #0594ce url(../images/bg-top.png) no-repeat center top;
+	background-size: 1919px 789px;
 	color: var(--white);
 	font-size: 16px;
 	font-family: var(--main);
