--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -83,6 +83,10 @@ h4 {
 	font-size: 14px;
 }
 
+img {
+	max-width: 100%;
+}
+
 .wrapper {
   width: 100%;
   max-width: var(--max-width);
@@ -276,6 +280,15 @@ header.main {
 
 	header {
 		text-align: center;
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		margin-bottom: var(--space-1);
+
+		img {
+			display: inline-block;
+			margin-right: var(--space-1);
+		}
 	}
 
 	h3 {
