Updated quote symbol

--- a/wp-content/themes/lrc/src/css/_vars.scss
+++ b/wp-content/themes/lrc/src/css/_vars.scss
@@ -13,6 +13,7 @@ $tablet: 768px;
   --black: #000;
   --shadow-color: rgba(0,0,0,0.4);
   --dark-green: #398234;
+  --neon-green: #8aff7d;
 
   //Spacing
   --max-width: 960px;
