--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -316,8 +316,19 @@ header.main {
 	width: 100%;
 	max-width: 400px;
 	overflow: hidden;
-	padding-left: var(--space-4);
+	padding-left: calc(58px + var(--space-1));
 	padding-bottom: var(--space-2);
+	position: relative;
+
+	&:before {
+		content: '';
+		position: absolute;
+		left: 0;
+		width: 58px;
+		height: 44px;
+		background: url(../images/quotes.svg) no-repeat;
+		background-size: 58px 44px;
+	}
 
 	div {
 		width: 100%;
@@ -497,10 +508,23 @@ header.main {
 	border-radius: 10px 10px 0 0;
 	text-align: center;
 	margin-top: var(--space-5);
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
 
-	img {
+	a {
+		display: block;
+		line-height: 1;
+	}
+
+	img, svg {
 		display: inline-block;
-  	margin-left: 10px;
+		max-width: 36px;
+		max-height: 10px;
+	}
+
+	path {
+		fill: #cc0000;
 	}
 }
 
