Styled call button

--- a/wp-content/themes/lrc/src/css/_vars.scss
+++ b/wp-content/themes/lrc/src/css/_vars.scss
@@ -7,6 +7,7 @@ $tablet: 768px;
   //Fonts
   --main: 'Agenda-Medium', verdana, sans-serif;
   --headline: 'Agenda-Bold', verdana, sans-serif;
+  --script: 'Cuisine', script;
 
   //Colors
   --white: #FFF;
