--- a/wp-content/themes/lrc/src/css/_fonts.scss
+++ b/wp-content/themes/lrc/src/css/_fonts.scss
@@ -17,3 +17,10 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Cuisine';
+    src: url('../fonts/Cuisine.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
