--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -85,13 +85,15 @@ h4 {
 
 img {
 	max-width: 100%;
+	height: auto;
+	width: auto;
 }
 
 .wrapper {
   width: 100%;
   max-width: var(--max-width);
 	margin: auto;
-  overflow: auto;
+  //overflow: auto;
   display: flex;
   justify-content: space-between;
 }
@@ -149,7 +151,6 @@ header.main {
 .top {
 	width: 100%;
 	min-height: 550px;
-	overflow: auto;
 	text-align: center;
 
 	&:before {
@@ -193,10 +194,10 @@ header.main {
 }
 
 .latinrogue {
-	position: relative;
-	top: -27px;
-	left: -42px;
-	width: 320px;
+	transform: translate(-42px, -27px);
+	min-width: 320px;
+	max-width: 320px;
+	width: 100%;
 }
 
 .logo {
@@ -231,16 +232,13 @@ header.main {
 }
 
 .about-left {
-	width: 250px;
+	width: 100%;
+	min-width: 250px;
 	margin: 0 var(--space-3) 0 0;
 	overflow: hidden;
 	flex: 1;
 	display: flex;
 	align-items: center;
-}
-
-.about-right {
-	width: 660px;
 }
 
 .services {
@@ -288,6 +286,10 @@ header.main {
 	h3 {
 		font-size: 41px;
 	}
+
+	p {
+		margin: 0;
+	}
 }
 
 .services-bottom {
@@ -296,7 +298,7 @@ header.main {
 }
 
 .call {
-	display: block;
+	display: flex;
 	position: relative;
 
 	&:before {
@@ -396,10 +398,8 @@ header.main {
 }
 
 .dirt {
-	box-shadow: inset 0px 15px 30px rgba(0,0,0,0.50);
-	width: 120%;
 	padding: var(--space-5) 0 0;
-	margin-left: -10%;
+	box-shadow: inset 0 30px 30px -15px rgba(0,0,0,0.50);
 }
 
 .quote-left {
