--- a/wp-content/themes/lrc/src/css/_vars.scss
+++ b/wp-content/themes/lrc/src/css/_vars.scss
@@ -20,6 +20,7 @@ $sm-phone: 320px;
   --shadow-color: rgba(0,0,0,0.4);
   --dark-green: #398234;
   --neon-green: #8aff7d;
+  --baby-blue: rgb(156,209,235, 0.66);
 
   //Spacing
   --max-width: 960px;
