Added responsive CSS for phones

--- a/wp-content/themes/lrc/src/css/_responsive.scss
+++ b/wp-content/themes/lrc/src/css/_responsive.scss
@@ -171,5 +171,53 @@
 }
 
 @media only screen and (max-width: $lg-phone) {
-	
+	body {
+		background-position-y: -290px;
+	}
+
+	.top {
+		// .wrapper {
+		// 	flex-wrap: wrap;
+		// 	flex-direction: column-reverse;
+		// }
+
+		&:before {
+			top: -160px;
+		}
+
+		h1 {
+			font-size: 36px;
+			line-height: 1;
+
+			small {
+				font-size: 22px;
+			}
+		}
+	}
+
+	.latinrogue {
+		min-width: 120px;
+		max-width: 155px;
+	}
+
+	.about {
+		h1 {
+			font-size: 36px;
+			line-height: 1;
+
+			small {
+				font-size: 22px;
+			}
+		}
+	}
+
+	.services {
+		h1 {
+			font-size: 36px;
+		}
+
+		h3 {
+			font-size: 24px;
+		}
+	}
 }
