Updated nav styling + smooth scroll function

--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -154,7 +154,7 @@ header.main {
 	height: 32px;
 	background: none;
 	border: none;
-	padding: 0;
+	padding: 6px;
 	flex-wrap: wrap;
 	align-content: space-between;
 
