--- a/wp-content/themes/lrc/src/css/_responsive.scss
+++ b/wp-content/themes/lrc/src/css/_responsive.scss
@@ -87,7 +87,6 @@
 		background-position-y: -150px;
 	}
 
-	//TODO: hamburger menu
 	header.main {
 		margin: 0;
 		width: 100%;
@@ -96,8 +95,33 @@
 		position: fixed;
 		top: 0;
 
-		nav { //TEMP
+		.wrapper {
+			flex-wrap: wrap;
+		}
+
+		nav {
+			width: 100%;
 			display: none;
+
+			.menu {
+				flex-direction: column;
+				margin-top: var(--space-1);
+				padding-top: var(--space-1);
+				border-top: 1px solid rgba(255,255,255,0.75);
+				width: 100%;
+
+				li {
+					margin: 0 0 var(--space-1);
+				}
+			}
+		}
+	}
+
+	.menu-open {
+		header.main {
+			nav {
+				display: flex;
+			}
 		}
 	}
 
