Updated grass gradient

--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -270,9 +270,9 @@ header.main {
 .bottom-grass {
 	width: 100%;
 	background: #46913f;
-	background: -moz-linear-gradient(top, rgba(70,145,63,1) 0%, rgba(44,112,39,1) 50%, rgba(70,145,63,1) 100%);
-	background: -webkit-linear-gradient(top, rgba(70,145,63,1) 0%,rgba(44,112,39,1) 50%,rgba(70,145,63,1) 100%);
-	background: linear-gradient(to bottom, rgba(70,145,63,1) 0%,rgba(44,112,39,1) 50%,rgba(70,145,63,1) 100%);
+	background: -moz-linear-gradient(top, #46913f 0%, #2c7027 35%, #2c7027 65%, #46913f 100%);
+	background: -webkit-linear-gradient(top, #46913f 0%,#2c7027 35%,#2c7027 65%,#46913f 100%);
+	background: linear-gradient(to bottom, #46913f 0%,#2c7027 35%,#2c7027 65%,#46913f 100%);
 	border-bottom: 1px solid var(--black);
 }
 
