--- a/wp-content/themes/lrc/src/css/_vars.scss
+++ b/wp-content/themes/lrc/src/css/_vars.scss
@@ -21,6 +21,7 @@ $sm-phone: 400px;
   --dark-green: #398234;
   --neon-green: #8aff7d;
   --baby-blue: rgb(156,209,235, 0.9);
+  --alpha-white: rgba(255,255,255,0.75);
 
   //Spacing
   --font-size: 16px;
