--- a/wp-content/themes/lrc/src/css/_responsive.scss
+++ b/wp-content/themes/lrc/src/css/_responsive.scss
@@ -94,6 +94,7 @@
 		background: var(--baby-blue);
 		position: fixed;
 		top: 0;
+		transition: 0.3s all;
 
 		.wrapper {
 			flex-wrap: wrap;
@@ -120,6 +121,12 @@
 					}
 				}
 			}
+		}
+	}
+
+	.scrolled-down {
+		header.main {
+			transform: translateY(-100%);
 		}
 	}
 
