--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -314,12 +314,45 @@ header.main {
 
 .services {
 	width: 100%;
-	overflow: auto;
+	overflow: hidden;
 	margin-bottom: var(--space-5);
+	padding-top: 44px;
+	position: relative;
 	
 	.wrapper {
 		flex-direction: column;
 		overflow: visible;
+
+		&:before {
+			content: '';
+			position: absolute;
+			top: -3px;
+			left: 0;
+			right: 0;
+			z-index: 2;
+			width: 100%;
+			height: 7px;
+			filter: blur(2px);
+			background: -moz-linear-gradient(left, rgba(57,145,50,0) 0%, rgba(57,145,50,1) 50%, rgba(57,145,50,0) 100%);
+background: -webkit-linear-gradient(left, rgba(57,145,50,0) 0%,rgba(57,145,50,1) 50%,rgba(57,145,50,0) 100%);
+background: linear-gradient(to right, rgba(57,145,50,0) 0%,rgba(57,145,50,1) 50%,rgba(57,145,50,0) 100%);
+		}
+	
+		&:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			width: 100%;
+			filter: blur(7px);
+			opacity: 0.5;
+			height: 11px;
+			display: block;
+			background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
+			background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 100%);
+			background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 100%);
+		}
 
 		> article {
 			margin-bottom: var(--space-5);
