--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -16,17 +16,18 @@
 *,
 *:after,
 *:before {
-	box-sizing: border-box;
+  box-sizing: border-box;
+  //opacity: 0.05; //debug
 }
 
 body {
-	background: #0594ce url(../images/bg-top.png) no-repeat center top;
+	//background: #0594ce url(../images/bg-top.png) no-repeat center top;
 	background-size: 1919px 789px;
 	color: var(--white);
 	font-size: var(--font-size);
 	font-family: var(--main);
 	text-shadow: 1px 1px 0px var(--shadow-color);
-	line-height: 1.3;
+  line-height: 1.3;
 }
 
 a,
