Added top + services sections

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -1,7 +1,7 @@
-//@import 'reset';
-//@import 'variables';
-//@import 'fonts';
-//@import 'flickity';
+@import 'reset';
+@import 'variables';
+@import 'fonts';
+@import 'flickity';
 
 @keyframes clouds {
 	from {
@@ -21,7 +21,7 @@
 }
 
 body {
-	//background: #0594ce url(../images/bg-top.png) no-repeat center top;
+	background: #0594ce url(../images/bg-top.png) no-repeat center top;
 	background-size: 1919px 789px;
 	color: var(--white);
 	font-size: var(--font-size);
