--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -1,31 +1,31 @@
-@import 'reset';
-@import 'variables';
-@import 'fonts';
-@import 'flickity';
+@import "reset";
+@import "variables";
+@import "fonts";
+@import "flickity";
 
 @keyframes clouds {
-	from {
-		background-position: 0px 0px;
-	}
+  from {
+    background-position: 0 0;
+  }
 
-	to {
-		background-position:-10000px -000px;
-	}
+  to {
+    background-position: -10000px -000;
+  }
 }
 
 *,
-*:after,
-*:before {
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
 body {
-	background: #0594ce url(../images/bg-top.png) no-repeat center top;
-	background-size: 1919px 789px;
-	color: var(--white);
-	font-size: var(--font-size);
-	font-family: var(--main);
-	text-shadow: 1px 1px 0px var(--shadow-color);
+  background: #0594ce url("../images/bg-top.png") no-repeat center top;
+  background-size: 1919px 789px;
+  color: var(--white);
+  font-size: var(--font-size);
+  font-family: var(--main);
+  text-shadow: 1px 1px 0 var(--shadow-color);
   line-height: 1.3;
 }
 
@@ -186,7 +186,7 @@ header.main {
 			position: relative;
 
 			&:after {
-				content: '';
+				content: "";
 				opacity: 0;
 				width: 100%;
 				height: 3px;
@@ -228,11 +228,11 @@ header.main {
 	text-align: center;
 
 	&:before {
-    content: '';
+    content: "";
     display: block;
 		width: 100%;
     height: 550px;
-		background: url(../images/bg-clouds.svg) repeat-x;
+		background: url("../images/bg-clouds.svg") repeat-x;
 		background-size: 1009px 789px;
 
     animation: clouds linear infinite 1000s;
@@ -328,7 +328,7 @@ header.main {
 		overflow: visible;
 
 		&:before {
-			content: '';
+			content: "";
 			position: absolute;
 			top: -3px;
 			left: 0;
@@ -343,7 +343,7 @@ header.main {
 		}
 
 		&:after {
-			content: '';
+			content: "";
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -410,10 +410,10 @@ header.main {
 	position: relative;
 
 	&:before {
-		content: '';
+		content: "";
 		display: block;
 		position: absolute;
-		background: url(../images/arrow.svg) no-repeat;
+		background: url("../images/arrow.svg") no-repeat;
 		width: 90px;
 		height: 102px;
 		left: calc(-90px - var(--space-1));
@@ -443,12 +443,12 @@ header.main {
 	position: relative;
 
 	&:before {
-		content: '';
+		content: "";
 		position: absolute;
 		left: 0;
 		width: 58px;
 		height: 44px;
-		background: url(../images/quotes.svg) no-repeat;
+		background: url("../images/quotes.svg") no-repeat;
 		background-size: 58px 44px;
 	}
 
@@ -680,8 +680,8 @@ header.main {
 		height: 56px;
 		text-indent: -9999px;
 		display: block;
-		background: url('https://s3.amazonaws.com/onepagelove/one-page-love-award-ribbon-right.svg') no-repeat;
+		background: url("https://s3.amazonaws.com/onepagelove/one-page-love-award-ribbon-right.svg") no-repeat;
 	}
 }
 
-@import 'responsive';
+@import "responsive";
